schema/testdata/validation_arbitrary_function_multiple_inputs/schema.keel
message Foo {
  bar Text
}

message Baz {
  bar Text
}

message Bar {
  id ID
}

model Person {
  actions {
    read getPerson(Foo, Baz) returns (Bar) {
      @function
    }
  }
}